<resources>
    <string name="app_name">Cam4Learn</string>
    <string name="hint_enter_email">E-mail</string>
    <string name="hint_enter_password">Password</string>
    <string name="login">Login</string>
    <string name="teachers">Teachers</string>
    <string name="subjects">Subjects</string>
    <string name="groups">Groups</string>
    <string name="login_without_password">Login without password</string>

    <string name="error_email_validation">You need to enter valid email!</string>
    <string name="error_password_validation">You need to enter valid password!</string>
    <string name="export">Export</string>
    <string name="ok">OK</string>
    <string name="info_lectors_export">This action will export data about lectors. Continue?</string>
    <string name="info_subjects_export">This action will export data about subjects. Continue?</string>
    <string name="two_placeholder_string">%1$s %2$s</string>
    <string name="error_export_permission">App needs permission to export.</string>
    <string name="json">JSON</string>
    <string name="csv">CSV</string>
    <string name="error_export_csv">Export to CSV failed!</string>
    <string name="error_export_json">Export to JSON failed!</string>
    <string name="export_json_success">JSON successfully exported!</string>
    <string name="export_csv_success">CSV successfully exported!</string>
    <string name="error_load_subject_statistic">Error loading subject statistic!</string>
    <string name="classes">Classes</string>
    <string name="cancel">Cancel</string>
    <string name="students">Students</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="class_name">Class Name</string>
    <string name="class_number">Class Number</string>
    <string name="date">Date</string>
    <string name="add_class">Add Class</string>
    <string name="save">Save</string>
    <string name="rooms">Rooms</string>
    <string name="delete_class_confirm">Delete class?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone</string>
    <string name="mark">Mark</string>
    <string name="is_present">Is Present?</string>


</resources>
