<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/item_class_attendance_student_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sergey Gubar" />

    <Button
        android:id="@+id/item_class_attendance_save_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_class_attendance_mark_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/mark"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/item_class_attendance_student_text"
        app:layout_constraintStart_toStartOf="@+id/item_class_attendance_student_text"
        app:layout_constraintTop_toBottomOf="@+id/item_class_attendance_student_text" />

    <Button
        android:id="@+id/item_class_attendance_is_present_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/is_present"
        app:layout_constraintBottom_toBottomOf="@+id/item_class_attendance_mark_input"
        app:layout_constraintStart_toEndOf="@+id/item_class_attendance_mark_input"
        app:layout_constraintTop_toTopOf="@+id/item_class_attendance_mark_input" />
</android.support.constraint.ConstraintLayout>